# dbt-bigquery

./: .sqlfluff  .user.yml  profiles.yml  pyproject.toml
datawarehouse/: dbt_project.yml
datawarehouse/models/staging/: stg_customers.sql  stg_locations.sql  stg_orders.sql  stg_products.sql  stg_supplies.sql
datawarehouse/snapshots/: stores_snapshot.sql
