[tool.poetry]
name = "dbt-bigquery"
version = "0.1.0"
description = ""
authors = ["Douglas Saturnino <douglasaturnino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.8.4"
dbt-postgres = "^1.8.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
sqlfluff = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
