[tool.poetry]
name = "dbt-bigquery"
version = "0.1.0"
description = ""
authors = ["Douglas Saturnino <douglasaturnino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dbt-core = "^1.8.4"
dbt-postgres = "^1.8.2"
sqlfluff-templater-dbt = "^3.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
sqlfluff = "^3.1.0"
taskipy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
fix = "sqlfluff fix snapshots && sqlfluff fix models"

[tool.sqlfluff.core]
templater = "dbt"
dialect = "postgres"
runaway_limit = 10
max_line_length = 80
indent_unit = "space"

[tool.sqlfluff.templater.dbt]
profiles_dir = "../"

[tool.sqlfluff.indentation]
tab_space_size = 4

[tool.sqlfluff.layout.type.comma]
spacing_before = "touch"
line_position = "trailing"

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.aliasing.table]
aliasing = "explicit"

[tool.sqlfluff.rules.aliasing.column]
aliasing = "explicit"

[tool.sqlfluff.rules.aliasing.expression]
allow_scalar = false

[tool.sqlfluff.rules.capitalisation.identifiers]
extended_capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.functions]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.literals]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.ambiguous.column_references]  # Number in group by
group_by_and_order_by_style = "implicit"
